<resources>
    <string name="app_name">Book Reviews</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="New" />
    <string name="reviews" />
    <string name="send" />
<!--    strings used in activities -->
    <string name="toolbarTitle">Book Reviews</string>
    <string name="imageSearch">Search</string>
<!--    strings used in fragments -->
    <string name="searchTitle">Search For A Book And Add It To Your To-Be-Read List!</string>
    <string name="explainSearch">Top 3 Search Results Below:</string>
    <string name="notifButton">Get TBR List Of Books</string>
    <string name="addTbr">Add To TBR</string>
    <string name="createTitle">Write A Review For A Book:</string>
    <string name="enterName">Enter Book Name</string>
    <string name="enterAuthor">Enter Book Author</string>
    <string name="enterScore">Enter Your Star Rating /10</string>
    <string name="enterLiked">Click to Add This Book to Your List of Liked Books:</string>
    <string name="enterDate">Enter Date Completed:</string>
    <string name="enterComment">Enter Your Review For This Book:</string>
    <string name="submit">Submit</string>
    <string name="likedTitle">These Are The Books That You Have Liked:</string>
    <string name="readTitle">Your Review For The Selected Book:</string>
    <string name="title">Title: </string>
    <string name="author">Author: </string>
    <string name="rating">Star Rating: </string>
    <string name="liked">You Liked The Book? </string>
    <string name="date">Date You Completed This Book: </string>
    <string name="comment">Comments About This Book: </string>
    <string name="listTitle">List Of Your Book Reviews: </string>
    <string name="preview">Click a book title to read the review.</string>
</resources>