<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateReviewFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/edtBookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/enterName"
        android:inputType="text"
        tools:layout_editor_absoluteX="19dp"
        android:imeOptions="actionDone"/>

    <EditText
        android:id="@+id/edtBookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/enterAuthor"
        android:inputType="text"
        tools:layout_editor_absoluteX="19dp"
        android:imeOptions="actionDone"/>

    <EditText
        android:id="@+id/edtScoreRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/enterScore"
        android:inputType="number"
        tools:layout_editor_absoluteX="27dp"
        android:imeOptions="actionDone"
        android:digits="0,1,2,3,4,5,6,7,8,9,10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enterLiked"
        android:imeOptions="actionDone" />

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/button"
        android:imeOptions="actionDone" />

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/enterDate"
        tools:layout_editor_absoluteX="16dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:imeOptions="actionDone" />

    <EditText
        android:id="@+id/edtComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/enterComment"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="3dp"
        android:imeOptions="actionDone" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        tools:layout_editor_absoluteX="160dp" />

</LinearLayout>